fix to overlapping modal

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -2854,6 +2854,7 @@ svg text.no-data { fill:#000000; stroke:#ffffff; stroke-width:0.1; stroke-opacit
 .wpdt-c .wpDataTablesWrapper table.wpDataTable tr.even:focus{ border:1px solid #127eec;  }*/
 .wpdt-c .modal .modal-header button.close:hover,
 .wpdt-c .modal .modal-header button.close:focus { color:#127eec; border:1px solid #127eec;  } 
+.wpdt-c .wdt-md-modal #modalintro { display:inline; }
 /* End of WPDataTables and US Map Styles */
 
 /* ACF HOME PAGE */
